--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vit-gpt2-image-captioning"]
 	path = vit-gpt2-image-captioning
-	url = ./vit-gpt2-image-captioning
+	url = https://huggingface.co/nlpconnect/vit-gpt2-image-captioning
